# Caesar

./: .gitignore  CMakeLists.txt  LATENCY_FOCUS_MVP.md
cpp/include/hft/: oms_core.hpp
cpp/src/: oms_core.cpp
cpp/tests/: oms_core_test.cpp
phase1/: README.md  market_data_schema.md
phase2/: README.md
phase3/: README.md
tests/: test_capture_normalize.py  test_oms_core.py
tools/: capture_normalize.py  mock_feed.py  oms_core.py
